Update start_url and scope in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "食鬼大冒險",
   "short_name": "PacMan",
-  "start_url": "/PacManGame/index.html",
-  "scope": "/PacManGame/",
+  "start_url": "https://github.com/kucoolku/PacManGame/index.html",
+  "scope": "https://github.com/kucoolku/PacManGame/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
