Simplify manifest.json and update start_url
Removed unnecessary fields from the manifest and updated the start_url to a relative path.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "食鬼大冒險",
   "short_name": "PacMan",
-  "start_url": "https://kucoolku.github.io/PacManGame/index.html",
-  "scope": "https://kucoolku.github.io/PacManGame/",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
@@ -19,4 +18,3 @@
     }
   ]
 }
-
